@@ -6,9 +6,12 @@ class Portlet extends CWidget
 	public $cssClass='portlet';
 	public $headerCssClass='header';
 	public $contentCssClass='content';
+	public $visible=true;
 
 	public function init()
 	{
+		if(!$this->visible)
+			return;
 		echo "<div class=\"{$this->cssClass}\">\n";
 		if($this->title!==null)
 			echo "<div class=\"{$this->headerCssClass}\">{$this->title}</div>\n";
@@ -17,6 +20,8 @@ class Portlet extends CWidget
 
 	public function run()
 	{
+		if(!$this->visible)
+			return;
 		$this->renderContent();
 		echo "</div><!-- {$this->contentCssClass} -->\n";
 		echo "</div><!-- {$this->cssClass} -->";
