@@ -65,7 +65,8 @@ class CWebUser extends CApplicationComponent implements IWebUser
 	/**
 	 * @var string|array the URL for login. If using array, the first element should be
 	 * the route to the login action, and the rest name-value pairs are GET parameters
-	 * to construct the login URL (e.g. array('site/login')).
+	 * to construct the login URL (e.g. array('site/login')). If this property is null,
+	 * a 401 HTTP exception will be raised instead.
 	 * @see CController::createUrl
 	 */
 	public $loginUrl=array('site/login');
